[project]
name = "pyspimosim"
version = "1.2.15"
authors = [
  { name="Pascal Grafe" },
]
description = "SpiMoSim"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "ALL_LICENSES.md"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools"]

[tool.setuptools]
include-package-data = true
zip-safe = false
license-files = ["LICENSE.md", "ALL_LICENSES.md"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "http://spimosim.pascalgrafe.net/"
"Bug Tracker" = "https://github.com/pasgra/pyspimosim/issues"
